@@ -1,3 +1,4 @@
+2824 [OneClick]             added a profile option to set an output file suffix
 2823 [x264]                 added support for unified 8/10 bit binaries (requires x264 2901+)
 2822 [AVC Levels Tool]      removed the AVC Levels Tool
 2821 [x264]                 added support for AVC level 6, 6.1 and 6.2 (requires x264 2851+)
